pin containers and header made

--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mastermind</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <script src="js/main.js"></script>
 </head>
-<body>
+<body> 
+    <!-- TITLE -->
+    <header>
+        <h1>MASTERMIND</h1>
+        <h4>Obey your master.</h4>
+    </header>
+    <!-- GAME BOARD -->
+    <main>
+        <div class="board">
+            <!-- left pins -->
+            <div class="left">
+                <div class="pin_container" id="answer"></div>
+                <div class="pin_container" id="guess10"></div>
+                <div class="pin_container" id="guess9"></div>
+                <div class="pin_container" id="guess8"></div>
+                <div class="pin_container" id="guess7"></div>
+                <div class="pin_container" id="guess6"></div>
+                <div class="pin_container" id="guess5"></div>
+                <div class="pin_container" id="guess4"></div>
+                <div class="pin_container" id="guess3"></div>
+                <div class="pin_container" id="guess2"></div>
+                <div class="pin_container" id="guess1"></div>
+                <div class="pin_container" id="guess"></div>
+            </div>
+
+            <!-- right pins -->
+            <div class="right">
+                <div class="ans_container">*EMPTY*</div>
+                <div class="ans_container" id="ans10"></div>
+                <div class="ans_container" id="ans9"></div>
+                <div class="ans_container" id="ans8"></div>
+                <div class="ans_container" id="ans7"></div>
+                <div class="ans_container" id="ans6"></div>
+                <div class="ans_container" id="ans5"></div>
+                <div class="ans_container" id="ans4"></div>
+                <div class="ans_container" id="ans3"></div>
+                <div class="ans_container" id="ans2"></div>
+                <div class="ans_container" id="ans1"></div>
+                <div class="ans_container" id="color_select"></div>
+
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
