--- a/index.html
+++ b/index.html
@@ -19,34 +19,151 @@
         <div class="board">
             <!-- left pins -->
             <div class="left">
-                <div class="pin_container" id="answer"></div>
-                <div class="pin_container" id="guess10"></div>
-                <div class="pin_container" id="guess9"></div>
-                <div class="pin_container" id="guess8"></div>
-                <div class="pin_container" id="guess7"></div>
-                <div class="pin_container" id="guess6"></div>
-                <div class="pin_container" id="guess5"></div>
-                <div class="pin_container" id="guess4"></div>
-                <div class="pin_container" id="guess3"></div>
-                <div class="pin_container" id="guess2"></div>
-                <div class="pin_container" id="guess1"></div>
-                <div class="pin_container" id="guess"></div>
+                <div class="pin_container" id="answer">
+                    <div class="big_pin">?</div>
+                    <div class="big_pin">?</div>
+                    <div class="big_pin">?</div>
+                    <div class="big_pin">?</div>
+                </div>
+                <div class="pin_container" id="guess10">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess9">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess8">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess7">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess6">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess5">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess4">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess3">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess2">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess1">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
+                <div class="pin_container" id="guess">
+                    <div class="big_pin">1</div>
+                    <div class="big_pin">2</div>
+                    <div class="big_pin">3</div>
+                    <div class="big_pin">4</div>
+                </div>
             </div>
 
             <!-- right pins -->
             <div class="right">
                 <div class="ans_container">*EMPTY*</div>
-                <div class="ans_container" id="ans10"></div>
-                <div class="ans_container" id="ans9"></div>
-                <div class="ans_container" id="ans8"></div>
-                <div class="ans_container" id="ans7"></div>
-                <div class="ans_container" id="ans6"></div>
-                <div class="ans_container" id="ans5"></div>
-                <div class="ans_container" id="ans4"></div>
-                <div class="ans_container" id="ans3"></div>
-                <div class="ans_container" id="ans2"></div>
-                <div class="ans_container" id="ans1"></div>
-                <div class="ans_container" id="color_select"></div>
+                <div class="ans_container" id="ans10">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans9">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans8">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans7">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans6">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans5">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans4">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans3">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans2">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="ans1">
+                    <div class="small_pin">1</div>
+                    <div class="small_pin">2</div>
+                    <div class="small_pin">3</div>
+                    <div class="small_pin">4</div>
+                </div>
+                <div class="ans_container" id="color_select">
+                    <div class="selector_pin" id="s_red">r</div>
+                    <div class="selector_pin" id="s_blue">b</div>
+                    <div class="selector_pin" id="s_green">g</div>
+                    <div class="selector_pin" id="s_yellow">y</div>
+                    <div class="selector_pin" id="s_purple">p</div>
+                    <div class="selector_pin" id="s_orange">o</div>
+                </div>
 
             </div>
         </div>
