css tweaks made to board

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
             <!-- right pins -->
             <div class="right">
-                <div class="ans_container">*EMPTY*</div>
+                <div class="ans_container"></div>
                 <div class="ans_container" id="ans10">
                     <div class="small_pin">1</div>
                     <div class="small_pin">2</div>
