--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Mastermind</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script src="js/main.js"></script>
 </head>
 <body> 
     <!-- TITLE -->
@@ -169,5 +168,7 @@
         </div>
     </main>
     
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
