--- a/index.html
+++ b/index.html
@@ -179,6 +179,6 @@
     </main>
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
