css styling done. mostly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
     <!-- TITLE -->
     <header>
-        <h1>MASTERMIND</h1>
+        <h1>M A S T E R M I N D</h1>
         <h4>Obey your master.</h4>
     </header>
     <!-- GAME BOARD -->
@@ -26,70 +26,70 @@
                         <div class="big_pin">?</div>
                     </div>
                     <div class="pin_container" id="guess10">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess9">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess8">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess7">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess6">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess5">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess4">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess3">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess2">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess1">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                     <div class="pin_container" id="guess">
-                        <div class="big_pin">1</div>
-                        <div class="big_pin">2</div>
-                        <div class="big_pin">3</div>
-                        <div class="big_pin">4</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
+                        <div class="big_pin">o</div>
                     </div>
                 </div>
 
@@ -97,72 +97,72 @@
                 <div class="right">
                     <div class="ans_container"></div>
                     <div class="ans_container" id="ans10">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans9">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans8">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans7">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans6">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans5">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans4">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans3">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans2">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="ans1">
-                        <div class="small_pin">1</div>
-                        <div class="small_pin">2</div>
-                        <div class="small_pin">3</div>
-                        <div class="small_pin">4</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
+                        <div class="small_pin">.</div>
                     </div>
                     <div class="ans_container" id="color_select">
-                        <div class="selector_pin" id="s_red">r</div>
-                        <div class="selector_pin" id="s_blue">b</div>
-                        <div class="selector_pin" id="s_green">g</div>
-                        <div class="selector_pin" id="s_yellow">y</div>
-                        <div class="selector_pin" id="s_purple">p</div>
-                        <div class="selector_pin" id="s_orange">o</div>
+                        <div class="selector_pin" id="s_red">.</div>
+                        <div class="selector_pin" id="s_blue">.</div>
+                        <div class="selector_pin" id="s_green">.</div>
+                        <div class="selector_pin" id="s_yellow">.</div>
+                        <div class="selector_pin" id="s_purple">.</div>
+                        <div class="selector_pin" id="s_orange">.</div>
                     </div>
 
                 </div>
