feedback container created

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
         </div>
         <div class="main_right">
             <div class="button" id="instructions">Instructions</div>
-            <div class="button" id="reset">Reset Game</div>
+            <div class="button" id="reset">Reset</div>
+            <div class="feedback_container"></div>
             <div class="gameplay">
                 <div class="button" id="check">Check</div>
                 <div class="button" id="clear">Delete</div>
