main functionality of board working

--- a/index.html
+++ b/index.html
@@ -26,61 +26,61 @@
                         <div class="big_pin">?</div>
                     </div>
                     <div class="pin_container" id="guess10">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b10"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess9">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b9"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess8">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b8"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess7">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b7"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess6">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b6"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess5">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b5"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess4">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b4"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess3">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b3"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess2">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b2"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess1">
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="b1"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
                         <div class="big_pin"></div>
