dashed line separators added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <!-- right pins -->
                 <div class="right">
-                    <div class="ans_container"></div>
+                    <div class="ans_container" id="none"></div>
                     <div class="ans_container" id="ans10">
                         <div class="small_pin"></div>
                         <div class="small_pin"></div>
