--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess">
-                        <div class="big_pin"></div>
-                        <div class="big_pin"></div>
-                        <div class="big_pin"></div>
-                        <div class="big_pin"></div>
+                        <div class="big_pin" id="s1"></div>
+                        <div class="big_pin" id="s2"></div>
+                        <div class="big_pin" id="s3"></div>
+                        <div class="big_pin" id="s4"></div>
                     </div>
                 </div>
 
