bugged myself out with half done change pin functions

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess">
-                        <div class="big_pin" id="s1"></div>
-                        <div class="big_pin" id="s2"></div>
-                        <div class="big_pin" id="s3"></div>
-                        <div class="big_pin" id="s4"></div>
+                        <div class="guess_pin" id="1"></div>
+                        <div class="guess_pin" id="2"></div>
+                        <div class="guess_pin" id="3"></div>
+                        <div class="guess_pin" id="4"></div>
                     </div>
                 </div>
 
