--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Mastermind</title>
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body> 
     <!-- TITLE -->
@@ -86,10 +90,10 @@
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess">
-                        <div class="big_pin" id="s1"></div>
-                        <div class="big_pin" id="s2"></div>
-                        <div class="big_pin" id="s3"></div>
-                        <div class="big_pin" id="s4"></div>
+                        <div class="big_pin" id="1"></div>
+                        <div class="big_pin" id="2"></div>
+                        <div class="big_pin" id="3"></div>
+                        <div class="big_pin" id="4"></div>
                     </div>
                 </div>
 
