select pins then color function works

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
                         <div class="small_pin"></div>
                     </div>
                     <div class="ans_container" id="color_select">
-                        <div class="selector_pin" id="s_red"></div>
-                        <div class="selector_pin" id="s_blue"></div>
-                        <div class="selector_pin" id="s_green"></div>
-                        <div class="selector_pin" id="s_yellow"></div>
-                        <div class="selector_pin" id="s_purple"></div>
-                        <div class="selector_pin" id="s_orange"></div>
+                        <div class="selector_pin" id="red"></div>
+                        <div class="selector_pin" id="blue"></div>
+                        <div class="selector_pin" id="green"></div>
+                        <div class="selector_pin" id="yellow"></div>
+                        <div class="selector_pin" id="purple"></div>
+                        <div class="selector_pin" id="orange"></div>
                     </div>
 
                 </div>
