trying to add drag drop and failing

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <div class="big_pin"></div>
                     </div>
                     <div class="pin_container" id="guess">
-                        <div class="guess_pin" id="1"></div>
+                        <div class="guess_pin dropzone" id="1"></div>
                         <div class="guess_pin" id="2"></div>
                         <div class="guess_pin" id="3"></div>
                         <div class="guess_pin" id="4"></div>
@@ -161,12 +161,12 @@
                         <div class="small_pin"></div>
                     </div>
                     <div class="ans_container" id="color_select">
-                        <div class="selector_pin" id="red"></div>
-                        <div class="selector_pin" id="blue"></div>
-                        <div class="selector_pin" id="green"></div>
-                        <div class="selector_pin" id="yellow"></div>
-                        <div class="selector_pin" id="purple"></div>
-                        <div class="selector_pin" id="orange"></div>
+                        <div class="selector_pin" id="red" draggable="true"></div>
+                        <div class="selector_pin" id="blue" draggable="true"></div>
+                        <div class="selector_pin" id="green" draggable="true"></div>
+                        <div class="selector_pin" id="yellow" draggable="true"></div>
+                        <div class="selector_pin" id="purple" draggable="true"></div>
+                        <div class="selector_pin" id="orange" draggable="true"></div>
                     </div>
 
                 </div>
